# GukoBot

./: .env.dev  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Guko/database/: __init__.py  db.py  models.py
Guko/plugins/eatwhat/: __init__.py  meal.json  meal.py
Guko/plugins/jrluck/: __init__.py  luck.py  luck_data.json
Guko/plugins/nickname/: __init__.py  db.py  nickname.py
Guko/plugins/saying/: README.md  __init__.py
Guko/utils/: log.py
tests/: test_plugin_jrluck.py  utils.py
